Import of KIME v0.1.0

--- a/kime/kime.rc
+++ b/kime/kime.rc
@@ -12,17 +12,27 @@ END
 
 DLGTEMPLATE IDD_OPTDLG 
 BEGIN
-	DIALOG "Options", 100, 116, 87, 168, 140, WS_VISIBLE, FCF_TITLEBAR
+	DIALOG "Options", 100, 18, 31, 313, 187, WS_VISIBLE, FCF_TITLEBAR
 	BEGIN
-		DEFPUSHBUTTON "OK", DID_OK, 32, 10, 51, 14, BS_PUSHBUTTON | BS_DEFAULT | WS_VISIBLE | WS_GROUP | WS_TABSTOP
-		PUSHBUTTON "Cancel", DID_CANCEL, 86, 10, 51, 14
-		CONTROL "Keyboard Layout", IDG_KBDLAYOUT, 35, 75, 100, 55, WC_STATIC, SS_GROUPBOX | DT_LEFT | DT_TOP | DT_MNEMONIC | WS_VISIBLE | WS_GROUP
-		CONTROL "KBD2", IDB_KBD2, 59, 108, 50, 10, WC_BUTTON, BS_AUTORADIOBUTTON | WS_VISIBLE | WS_GROUP | WS_TABSTOP
-		CONTROL "KBD390", IDB_KBD390, 59, 94, 50, 10, WC_BUTTON, BS_AUTORADIOBUTTON | WS_VISIBLE | WS_TABSTOP
-		CONTROL "KBD3F", IDB_KBD3F, 59, 80, 50, 10, WC_BUTTON, BS_AUTORADIOBUTTON | WS_VISIBLE | WS_TABSTOP
-		CONTROL "Ztelnet Patch", IDG_PATCHGROUP, 34, 34, 100, 34, WC_STATIC, SS_GROUPBOX | DT_LEFT | DT_TOP | DT_MNEMONIC | WS_VISIBLE | WS_GROUP
-		CONTROL "3 bulsik", IDB_3BUL, 58, 49, 50, 10, WC_BUTTON, BS_AUTOCHECKBOX | WS_VISIBLE | WS_GROUP | WS_TABSTOP
-		CONTROL "Chatting line", IDB_CHATLINE, 58, 37, 55, 10, WC_BUTTON, BS_AUTOCHECKBOX | WS_VISIBLE | WS_TABSTOP
+		DEFPUSHBUTTON "OK", DID_OK, 51, 9, 98, 14, BS_PUSHBUTTON | BS_DEFAULT | WS_VISIBLE | WS_GROUP | WS_TABSTOP
+		PUSHBUTTON "Cancel", DID_CANCEL, 164, 9, 98, 14
+		CONTROL "Keyboard Layout", IDG_KBDLAYOUT, 21, 109, 87, 68, WC_STATIC, SS_GROUPBOX | DT_LEFT | DT_TOP | DT_MNEMONIC | WS_VISIBLE | WS_GROUP
+		CONTROL "", IDB_KBD2, 28, 153, 73, 10, WC_BUTTON, BS_AUTORADIOBUTTON | WS_VISIBLE | WS_GROUP | WS_TABSTOP
+		CONTROL "", IDB_KBD390, 28, 136, 73, 10, WC_BUTTON, BS_AUTORADIOBUTTON | WS_VISIBLE
+		CONTROL "", IDB_KBD3F, 28, 119, 73, 8, WC_BUTTON, BS_AUTORADIOBUTTON | WS_VISIBLE
+		CONTROL "Ztelnet Patch", IDG_PATCHGROUP, 21, 55, 87, 47, WC_STATIC, SS_GROUPBOX | DT_LEFT | DT_TOP | DT_MNEMONIC | WS_VISIBLE | WS_GROUP
+		CONTROL "", IDB_3BUL, 27, 80, 73, 10, WC_BUTTON, BS_AUTOCHECKBOX | WS_VISIBLE | WS_GROUP | WS_TABSTOP
+		CONTROL "", IDB_CHATLINE, 27, 63, 73, 10, WC_BUTTON, BS_AUTOCHECKBOX | WS_VISIBLE
+		CONTROL "두벌식", IDHS_KBD2, 41, 154, 60, 8, "HanStaticText", WS_VISIBLE | WS_GROUP
+		CONTROL "세벌식 390", IDHS_KBD390, 41, 137, 60, 8, "HanStaticText", WS_VISIBLE
+		CONTROL "세벌식 최종", IDHS_KBD3F, 41, 119, 60, 8, "HanStaticText", WS_VISIBLE
+		CONTROL "세벌식", IDHS_3BUL, 40, 81, 60, 8, "HanStaticText", WS_VISIBLE | WS_GROUP
+		CONTROL "채팅라인", IDHS_CHATLINE, 40, 64, 60, 8, "HanStaticText", WS_VISIBLE
+		CONTROL "Font Association", IDG_FONTASSOCIATION, 129, 55, 171, 122, WC_STATIC, SS_GROUPBOX | DT_LEFT | DT_TOP | DT_MNEMONIC | WS_VISIBLE | WS_GROUP
+        CONTROL "현재 :", IDHS_CURRENT, 137, 159, 154, 8, "HanStaticText", WS_VISIBLE | WS_GROUP
+		CONTROL "없음", IDHS_CURRENTFONT, 137, 149, 154, 8, "HanStaticText", WS_VISIBLE | WS_GROUP
+        CONTROL "Font List", IDLB_FONTLIST, 137, 79, 154, 68, WC_LISTBOX, LS_OWNERDRAW | WS_VISIBLE | WS_GROUP | WS_TABSTOP
+		CONTROL "Apply", IDB_FONTAPPLY, 195, 59, 40, 14, WC_BUTTON, BS_PUSHBUTTON | WS_VISIBLE | WS_GROUP | WS_TABSTOP
 	END
 
 END
