Import of KIME v0.1.3

--- a/kime/makefile
+++ b/kime/makefile
@@ -1,12 +1,10 @@
 EXE_NAME   = kime.exe
 SRC_LIST   = kime.c kimedlg.c inputbox.c khserver.c hwndlist.c except.c
 RC_LIST    = kime.rc
-A_LIST     =
+A_LIST	   =
 LIB_LIST   = kimehook.lib $(HAN_LIB) $(HST_LIB)
 
 COPY = +copy
-
-GNU_MAKE = make
 
 HAN_LIB_DIR = ../hanlib
 HAN_LIB = $(HAN_LIB_DIR)/han.lib
@@ -17,16 +15,16 @@ HST_LIB = $(HST_LIB_DIR)/hst.lib
 HCHLBDLG_DIR = ..\hchlb
 HCHLBDLG_RES = $(HCHLBDLG_DIR)\hchlbdlg.res
 
-.INCLUDE : "makefile.inc"
+include makefile.inc
 
 kime.obj: kime.c kime.h kimedlg.h kimehook.h khserver.h inputbox.h \
-          ../hanlib/han.h ../hanlib/hch.h ../hanlib/hout.h ../hanlib/hin.h \
-          ../hst/hst.h
+		  ../hanlib/han.h ../hanlib/hch.h ../hanlib/hout.h ../hanlib/hin.h \
+		  ../hst/hst.h
 
 kimedlg.obj: kimedlg.c kimedlg.h
 
 inputbox.obj: inputbox.c inputbox.h $(HAN_LIB_DIR)/han.h $(HAN_LIB_DIR)/hch.h \
-              $(HAN_LIB_DIR)/hout.h $(HAN_LIB_DIR)/hin.h
+			  $(HAN_LIB_DIR)/hout.h $(HAN_LIB_DIR)/hin.h
 
 khserver.obj: khserver.c khserver.h hwndlist.h
 
@@ -35,24 +33,24 @@ hwndlist.obj: hwndlist.c hwndlist.h
 except.obj: except.c except.h
 
 kimehook.obj: kimehook.c kime.h kimehook.h kimedlg.h khserver.h \
-              kimeconv.inc inputbox.h $(HAN_LIB_DIR)/han.h $(HAN_LIB_DIR)/hch.h \
-              $(HAN_LIB_DIR)/hout.h $(HAN_LIB_DIR)/hin.h
+			  kimeconv.inc inputbox.h $(HAN_LIB_DIR)/han.h $(HAN_LIB_DIR)/hch.h \
+			  $(HAN_LIB_DIR)/hout.h $(HAN_LIB_DIR)/hin.h
 
 kimehook.lib : kimehook.dll kimehook.def
-    $(IMP) -o $@ kimehook.def
+	$(IMP) -o $@ kimehook.def
 
 kimehook.dll : kimehook.obj $(HAN_LIB) kimehook.def
-    $(CC) $(LFDLL) $&
+	$(CC) -o $@ $(LFDLL) $^
 
 kime.res : kime.rc kime.h kimedlg.h $(HCHLBDLG_RES)
-    $(RC) -r kime.rc
-    $(COPY) /b kime.res + $(HCHLBDLG_RES) kime.res
+	$(RC) -r kime.rc
+	$(COPY) /b kime.res + $(HCHLBDLG_RES) kime.res
 
 $(HAN_LIB) :
-    $(GNU_MAKE) -C $(HAN_LIB_DIR) han.lib
+	$(MAKE) -C $(HAN_LIB_DIR) han.lib
 
 $(HST_LIB) :
-    $(GNU_MAKE) -C $(HST_LIB_DIR) hst.lib
+	$(MAKE) -C $(HST_LIB_DIR) hst.lib
 
 $(HCHLBDLG_RES) :
-    $(GNU_MAKE) -C $(HCHLBDLG_DIR) hchlbdlg.res
+	$(MAKE) -C $(HCHLBDLG_DIR) hchlbdlg.res
