Support to reload an exception data file

--- a/kime/kime.rc
+++ b/kime/kime.rc
@@ -5,6 +5,7 @@
 MENU ID_POPUP
 BEGIN
     MENUITEM "~Hide", IDM_HIDE
+    MENUITEM "~Reload", IDM_RELOAD
     MENUITEM "~Options...", IDM_OPTIONS
     MENUITEM SEPARATOR
     MENUITEM "E~xit", IDM_EXIT
