Add options for OS2 IME to a option dialog
    modified:   kime/kime.rc
    modified:   kime/kimedlg.c
    modified:   kime/kimedlg.h

--- a/kime/kime.rc
+++ b/kime/kime.rc
@@ -24,6 +24,9 @@ BEGIN
 		CONTROL "두벌식", IDHS_KBD2, 41, 154, 60, 8, "HanStaticText", WS_VISIBLE | WS_GROUP
 		CONTROL "세벌식 390", IDHS_KBD390, 41, 137, 60, 8, "HanStaticText", WS_VISIBLE
 		CONTROL "세벌식 최종", IDHS_KBD3F, 41, 119, 60, 8, "HanStaticText", WS_VISIBLE
+		CONTROL "OS/2 IME", IDG_OS2IME, 21, 55, 87, 47, WC_STATIC, SS_GROUPBOX | DT_LEFT | DT_TOP | DT_MNEMONIC | WS_VISIBLE | WS_GROUP
+		CONTROL "", IDB_USEOS2IME, 27, 80, 73, 10, WC_BUTTON, BS_AUTOCHECKBOX | WS_VISIBLE | WS_GROUP | WS_TABSTOP
+		CONTROL "OS/2 IME 사용", IDHS_USEOS2IME, 40, 81, 60, 8, "HanStaticText", WS_VISIBLE | WS_GROUP
 		CONTROL "Font Association", IDG_FONTASSOCIATION, 129, 55, 171, 122, WC_STATIC, SS_GROUPBOX | DT_LEFT | DT_TOP | DT_MNEMONIC | WS_VISIBLE | WS_GROUP
         CONTROL "현재 :", IDHS_CURRENT, 137, 159, 154, 8, "HanStaticText", WS_VISIBLE | WS_GROUP
 		CONTROL "없음", IDHS_CURRENTFONT, 137, 149, 154, 8, "HanStaticText", WS_VISIBLE | WS_GROUP
